Implement api data row removal.

--- a/web/templates/api-data-manager/index.html
+++ b/web/templates/api-data-manager/index.html
@@ -2,8 +2,9 @@
             data-ng-controller="ApiDataManager.MainController as vm"
 >
     <md-content layout="column" flex md-whiteframe="4">
+        <loader data-ng-if="vm.loading"></loader>
         <md-content layout-padding flex layout="column">
-            <md-content>
+            <md-content layout="row" layout-align="start center">
                 <md-input-container>
                     <label>{{ ::'INTERFACE' | translate }}</label>
                     <md-select data-ng-model="vm.selectedApi"
@@ -33,13 +34,24 @@
                         </md-option>
                     </md-select>
                 </md-input-container>
+
+                <span flex></span>
+
+                <md-button class="md-icon-button"
+                           data-ng-disabled="vm.selectedRows.length <= 0"
+                           data-ng-click="vm.removeRows()"
+                >
+                    <md-icon>
+                        delete
+                    </md-icon>
+                </md-button>
             </md-content>
 
             <md-content layout="column" flex>
                 <md-table-container layout="column" flex>
                     <table md-table md-row-select
                            multiple
-                           data-ng-model="vm.selected"
+                           data-ng-model="vm.selectedRows"
                     >
                         <thead md-head>
                             <tr md-row>
