Implement simple notification list and dismissing operations.

--- a/web/templates/notifications/index.html
+++ b/web/templates/notifications/index.html
@@ -1,1 +1,43 @@
-<h1>Notifications</h1>
+<md-content layout="column" flex layout-fill
+            data-ng-controller="Notifications.MainController as vm"
+            data-ng-init="vm.load()"
+>
+    <md-subheader class="md-no-sticky md-primary no-margin">
+        <md-content flex layout="row" layout-align="start center">
+            {{ ::'UNDISMISSED_NOTIFICATIONS' | translate }}
+            <span flex></span>
+            <md-button class="md-raised"
+                       data-ng-click="vm.selectAll()"
+            >
+                {{ ::'SELECT_ALL' | translate }}
+            </md-button>
+
+            <md-button class="md-raised"
+                       data-ng-click="vm.dismiss()"
+            >
+                {{ ::'DISMISS' | translate }}
+            </md-button>
+        </md-content>
+    </md-subheader>
+    <md-list>
+        <md-list-item class="noright"
+                      data-ng-repeat="notification in vm.data"
+                      data-ng-click="null"
+        >
+            <div>
+                <span class="text-muted">
+                    {{ ::notification.timestamp | date:'dd.MM.yyyy H:mm:ss' }}
+                </span>
+                <br/>
+                <span>{{ ::notification.content }}</span>
+            </div>
+            <md-checkbox class="md-secondary"
+                         aria-label="{{ ::'SELECTED' | translate }}"
+                         data-ng-model="notification.selected"
+            ></md-checkbox>
+        </md-list-item>
+    </md-list>
+    <span data-ng-if="vm.data.length === 0" class="text-center">
+        {{ ::'NO_UNDISMISSED_NOTIFICATIONS' | translate }}
+    </span>
+</md-content>
