--- a/web/templates/dashboard/index.html
+++ b/web/templates/dashboard/index.html
@@ -28,7 +28,9 @@
         </md-fab-trigger>
         <md-toolbar>
             <md-fab-actions class="md-toolbar-tools">
-                <md-button class="md-icon-button">
+                <md-button class="md-icon-button"
+                           data-ng-click="vm.openSettings()"
+                >
                     <md-icon>settings</md-icon>
                 </md-button>
 
@@ -38,5 +40,4 @@
             </md-fab-actions>
         </md-toolbar>
     </md-fab-toolbar>
-
 </md-content>
