Add bases for the graph view.

--- a/web/templates/sidemenu.html
+++ b/web/templates/sidemenu.html
@@ -8,6 +8,11 @@
             <md-icon>dashboard</md-icon>
             <span>{{ ::'DASHBOARD' | translate }}</span>
         </md-sidemenu-button>
+
+        <md-sidemenu-button href="#/graph">
+            <md-icon>timeline</md-icon>
+            <span>{{ ::'GRAPH' | translate }}</span>
+        </md-sidemenu-button>
     </md-sidemenu-group>
 
     <md-sidemenu-group>
