--- a/web/css/style.css
+++ b/web/css/style.css
@@ -68,7 +68,8 @@ loader {
 }
 
 .md-sidenav-large {
-    width: 420px !important;
+    width: 600px !important;
+    max-width: 600px !important;
 }
 
 .md-sub-toolbar {
