Implement saved search settings.

--- a/web/templates/filters/generic-filter.html
+++ b/web/templates/filters/generic-filter.html
@@ -1,15 +1,17 @@
-<md-input-container>
-    <label>{{ ::vm.label }}</label>
-    <md-select
-            id="{{ ::vm.id }}"
-            data-ng-model="vm.ngModel"
-            aria-label="{{ ::vm.label }}"
-            required
-    >
-        <md-option value="{{ $index }}" data-ng-selected="$first"
-                   data-ng-repeat="option in vm.options track by option.id"
+<md-content layout="row" layout-align="start center" flex>
+        <md-input-container flex>
+        <label>{{ ::vm.label }}</label>
+        <md-select
+                id="{{ ::vm.id }}"
+                data-ng-model="vm.ngModel"
+                aria-label="{{ ::vm.label }}"
+                required
         >
-            {{ ::option.name | translate }}
-        </md-option>
-    </md-select>
-</md-input-container>
+            <md-option data-ng-value="option.id" data-ng-selected="$first"
+                       data-ng-repeat="option in vm.options track by option.id"
+            >
+                {{ ::option.name | translate }}
+            </md-option>
+        </md-select>
+    </md-input-container>
+</md-content>
