Implement required-option in generic filter directive.

--- a/web/templates/graph/index.html
+++ b/web/templates/graph/index.html
@@ -45,6 +45,7 @@
             <generic-filter
                     data-ng-model="vm.graph.scale"
                     data-collection="vm.scales"
+                    data-require="true"
                     data-action="filters/timescale"
                     data-label="{{ ::'SCALE_SELECT' | translate }}"
             ></generic-filter>
