--- a/web/templates/filters/generic-filter.html
+++ b/web/templates/filters/generic-filter.html
@@ -1,11 +1,11 @@
 <md-content layout="row" layout-align="start center" flex>
-        <md-input-container flex>
+    <md-input-container flex>
         <label>{{ ::vm.label }}</label>
         <md-select
                 id="{{ ::vm.id }}"
                 data-ng-model="vm.ngModel"
                 aria-label="{{ ::vm.label }}"
-                required
+                required="{{ ::vm.require }}"
         >
             <md-option data-ng-value="option.id" data-ng-selected="$first"
                        data-ng-repeat="option in vm.options track by option.id"
