--- a/web/templates/graph/index.html
+++ b/web/templates/graph/index.html
@@ -27,6 +27,7 @@
                     data-ng-model="vm.graph.chartType"
                     data-action="filters/charttype"
                     data-collection="vm.chartTypes"
+                    data-require="true"
                     data-label="{{ ::'CHART_TYPE' | translate }}"
             ></generic-filter>
 
